Add test api function

--- a/local-test/.gitignore
+++ b/local-test/.gitignore
@@ -1,9 +1,5 @@
-# package directories
+dist
 node_modules
 jspm_packages
-
-# Serverless directories
 .serverless
-
-# Webpack directories
 .webpack
