--- a/local-workflow/package.json
+++ b/local-workflow/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "dev": "serverless offline start",
-    "test": "npm run jest"
+    "dev": "NODE_ENV=development sls offline start --env development",
+    "test": "NODE_ENV=development npm run jest",
+    "deploy": "NODE_ENV=production sls deploy"
   },
-  "author": "",
+  "author": "Ben Gao",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -28,6 +29,7 @@
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
     "prettier-plugin-package": "^1.1.0",
+    "serverless-dotenv-plugin": "^3.0.0",
     "serverless-dynamodb-local": "^0.2.39",
     "serverless-offline": "^6.8.0",
     "serverless-webpack": "^5.3.5",
