Refactor serverless config to fit Dynamodb and env

--- a/local-workflow/configs/.env
+++ b/local-workflow/configs/.env
@@ -1,3 +1,4 @@
-# Includes all default variables
+# Includes common variables customized effective on env
+
 STAGE: development
 DYNAMO_TABLE_NOTES: ${self:provider.stage}-notes
