--- a/local-workflow/resources/dynamodb-table.yml
+++ b/local-workflow/resources/dynamodb-table.yml
@@ -1,17 +1,31 @@
 Resources:
-  NotesTable:
-    Type: AWS::DynamoDB::Table
+  # notesTable:
+  #   Type: AWS::DynamoDB::Table
+  #   Properties:
+  #     TableName: ${self:custom.tableName}
+  #     AttributeDefinitions:
+  #       - AttributeName: userId
+  #         AttributeType: S
+  #       - AttributeName: noteId
+  #         AttributeType: S
+  #     KeySchema:
+  #       - AttributeName: userId
+  #         KeyType: HASH
+  #       - AttributeName: noteId
+  #         KeyType: RANGE
+  #     # Set the capacity to auto-scale
+  #     BillingMode: PAY_PER_REQUEST
+  TodosDynamoDbTable:
+    Type: 'AWS::DynamoDB::Table'
+    DeletionPolicy: Retain
     Properties:
-      TableName: ${self:custom.tableName}
       AttributeDefinitions:
-        - AttributeName: userId
-          AttributeType: S
-        - AttributeName: noteId
+        - AttributeName: id
           AttributeType: S
       KeySchema:
-        - AttributeName: userId
+        - AttributeName: id
           KeyType: HASH
-        - AttributeName: noteId
-          KeyType: RANGE
-      # Set the capacity to auto-scale
-      BillingMode: PAY_PER_REQUEST
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 1
+      TableName: notes
