--- a/local-workflow/package.json
+++ b/local-workflow/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "dev": "SLS_DEBUG=* sls offline start --env development",
+    "dev": "SLS_DEBUG=* NODE_ENV=development sls offline start",
     "test": "NODE_ENV=development npm run jest",
     "deploy": "NODE_ENV=production sls deploy"
   },
