--- a/local-workflow/serverless.yml
+++ b/local-workflow/serverless.yml
@@ -29,7 +29,7 @@ provider:
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
       Resource:
-        - 'Fn::GetAtt': [NotesTable, Arn]
+        - 'Fn::GetAtt': [NotesTable, TodosDynamoDbTable, Arn]
 
 custom:
   # stage: ${opt:stage, self:provider.stage}
