--- a/local-workflow/resources/dynamodb-table.yml
+++ b/local-workflow/resources/dynamodb-table.yml
@@ -22,6 +22,8 @@ Resources:
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
+        # - AttributeName: id
+        #   AttributeType: S
       KeySchema:
         - AttributeName: id
           KeyType: HASH
