--- a/serverless-dynamodb/package.json
+++ b/serverless-dynamodb/package.json
@@ -2,14 +2,17 @@
   "name": "xcutes-services",
   "version": "1.0.0",
   "description": "",
+  "license": "MIT",
+  "author": "Ben Gao",
   "main": "handler.js",
   "scripts": {
-    "dev": "SLS_DEBUG=* NODE_ENV=development sls offline start --env yml",
-    "test": "NODE_ENV=development npm run jest",
-    "deploy": "NODE_ENV=production sls deploy"
+    "deploy": "NODE_ENV=production sls deploy",
+    "dev": "SLS_DEBUG=* NODE_ENV=development sls offline start",
+    "test": "NODE_ENV=development npm run jest"
   },
-  "author": "Ben Gao",
-  "license": "MIT",
+  "dependencies": {
+    "source-map-support": "^0.5.19"
+  },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
@@ -20,7 +23,7 @@
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "eslint": "^7.10.0",
+    "eslint": "^7.11.0",
     "eslint-config-recommended": "^4.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.0.2",
@@ -29,14 +32,10 @@
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
     "prettier-plugin-package": "^1.1.0",
-    "serverless-dotenv-plugin": "^3.0.0",
     "serverless-dynamodb-local": "0.2.30",
     "serverless-offline": "^6.8.0",
     "serverless-webpack": "^5.3.5",
     "webpack": "^4.44.2",
     "webpack-node-externals": "^2.5.2"
-  },
-  "dependencies": {
-    "source-map-support": "^0.5.19"
   }
 }
